--- a/imagedrop.css
+++ b/imagedrop.css
@@ -1,5 +1,5 @@
-﻿/*
- * Imagedrop.js  v2.0.0 (2021-07-26)
+/*
+ * Imagedrop  v2.0.0 (2021-07-26)
  * Copyright 2021 yuchan.
  * Licensed under the MIT license.
  */
