--- a/imagedrop.css
+++ b/imagedrop.css
@@ -1,3 +1,10 @@
+/*
+ * Imagedrop.js  v2.0.3 (2022-03-06)
+ *
+ * Copyright 2021 yuchan1.
+ * Licensed under the MIT license.
+ */
+
 .imagedrop {
     margin: 0px;
     padding: 0px;
